--- a/SOPKATHON_Kick/Sources/MyPage/MyPage.storyboard
+++ b/SOPKATHON_Kick/Sources/MyPage/MyPage.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Detail View Controller-->
+        <!--My Page View Controller-->
         <scene sceneID="zWA-g7-Ks7">
             <objects>
-                <viewController storyboardIdentifier="MyPageViewController" id="fHZ-aW-lEg" customClass="DetailViewController" customModule="SOPKATHON_Kick" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MyPageViewController" id="fHZ-aW-lEg" customClass="MyPageViewController" customModule="SOPKATHON_Kick" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zi9-rn-zQv">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
