--- a/SOPKATHON_Kick/Sources/King/Home.storyboard
+++ b/SOPKATHON_Kick/Sources/King/Home.storyboard
@@ -30,7 +30,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gP3-68-Fcu">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="900"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="851"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f2j-cV-o8w">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="934"/>
@@ -69,7 +69,7 @@
                                                     <constraint firstAttribute="bottom" secondItem="Ln6-Zo-9Ym" secondAttribute="bottom" constant="24" id="fAG-rM-qG7"/>
                                                 </constraints>
                                             </view>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oVq-j2-Z6D">
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oVq-j2-Z6D">
                                                 <rect key="frame" x="18" y="78" width="339" height="205"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
@@ -77,7 +77,7 @@
                                                     <constraint firstAttribute="width" constant="339" id="jvk-9b-31T"/>
                                                 </constraints>
                                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nig-ZI-aPP">
-                                                    <size key="itemSize" width="128" height="128"/>
+                                                    <size key="itemSize" width="339" height="205"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -90,18 +90,6 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="339" height="205"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JMT-nE-8Af">
-                                                                    <rect key="frame" x="16" y="136" width="48" height="24"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V3p-KU-Ztn">
-                                                                    <rect key="frame" x="16" y="164" width="29" height="14"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IIa-Gv-RwR">
                                                                     <rect key="frame" x="0.0" y="0.0" width="339" height="205"/>
                                                                 </imageView>
@@ -109,12 +97,8 @@
                                                             <constraints>
                                                                 <constraint firstItem="IIa-Gv-RwR" firstAttribute="top" secondItem="dIK-a4-kFn" secondAttribute="top" id="B9W-eF-DkQ"/>
                                                                 <constraint firstItem="IIa-Gv-RwR" firstAttribute="leading" secondItem="dIK-a4-kFn" secondAttribute="leading" id="Bc8-wX-uS8"/>
-                                                                <constraint firstAttribute="bottom" secondItem="V3p-KU-Ztn" secondAttribute="bottom" constant="27" id="OPn-Ws-BqS"/>
-                                                                <constraint firstItem="V3p-KU-Ztn" firstAttribute="leading" secondItem="dIK-a4-kFn" secondAttribute="leading" constant="16" id="Wf0-9o-q6i"/>
-                                                                <constraint firstItem="JMT-nE-8Af" firstAttribute="leading" secondItem="dIK-a4-kFn" secondAttribute="leading" constant="16" id="gaA-NX-pVz"/>
                                                                 <constraint firstAttribute="trailing" secondItem="IIa-Gv-RwR" secondAttribute="trailing" id="pv6-Ot-jso"/>
                                                                 <constraint firstAttribute="bottom" secondItem="IIa-Gv-RwR" secondAttribute="bottom" id="rvc-cI-Smg"/>
-                                                                <constraint firstAttribute="bottom" secondItem="JMT-nE-8Af" secondAttribute="bottom" constant="45" id="x2B-UD-WDU"/>
                                                             </constraints>
                                                         </collectionViewCellContentView>
                                                         <size key="customSize" width="339" height="205"/>
@@ -130,6 +114,20 @@
                                                 <rect key="frame" x="0.0" y="293.5" width="414" height="27.5"/>
                                                 <color key="currentPageIndicatorTintColor" systemColor="systemRedColor"/>
                                             </pageControl>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="내가 제대로 길잃은 썰푼다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JMT-nE-8Af">
+                                                <rect key="frame" x="30" y="230" width="185" height="22"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="내가 고양이를 따라가다가 인생에서..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V3p-KU-Ztn">
+                                                <rect key="frame" x="30" y="260" width="177" height="15"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0yf-T1-5SP">
                                                 <rect key="frame" x="18" y="405.5" width="377" height="528.5"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -260,6 +258,8 @@
                             <constraint firstItem="JKK-sy-afr" firstAttribute="trailing" secondItem="gP3-68-Fcu" secondAttribute="trailing" id="st6-V6-dQz"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="iconHomeUnpressed" selectedImage="iconHomePressed" id="Jq4-kZ-wCj"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <size key="freeformSize" width="414" height="934"/>
                     <connections>
                         <outlet property="homeCollectionView" destination="oVq-j2-Z6D" id="I27-i6-EmK"/>
@@ -275,6 +275,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="iconHomePressed" width="24" height="48.5"/>
+        <image name="iconHomeUnpressed" width="24" height="48.5"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
