--- a/SOPKATHON_Kick/Sources/Login/Login.storyboard
+++ b/SOPKATHON_Kick/Sources/Login/Login.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rectangle.on.rectangle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VWA-yz-SAp">
-                                <rect key="frame" x="130" y="131.5" width="155" height="115.5"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgLogo" translatesAutoresizingMaskIntoConstraints="NO" id="VWA-yz-SAp">
+                                <rect key="frame" x="130" y="131" width="155" height="116"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="116" id="5uw-Aj-GbD"/>
                                 </constraints>
@@ -235,7 +235,7 @@
         </designable>
     </designables>
     <resources>
-        <image name="rectangle.on.rectangle.fill" catalog="system" width="128" height="96"/>
+        <image name="imgLogo" width="178" height="112"/>
         <image name="rectangle1" width="204" height="42"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
